test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan
   Compiling library impl_orphan_lib (test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan_lib)
   Compiling library impl_orphan (test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan)
error: coherence violation: only traits defined in this module can be implemented for external types
 --> test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan/src/lib.sw:4:1
  |
...
4 | impl Vec<bool> for bool {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot implement `Vec` for `bool`: both originate outside this module
  |
  = help: only traits defined in this module can be implemented for external types
  = help:  
  = help: move this impl into the module that defines `bool`
  = help: or define and use a local trait instead of `Vec` to avoid the orphan rule
____

  Aborting due to 1 error.
error: Failed to compile impl_orphan
